POWR-726 first stab at using paragraphs for featuring content

--- a/web/sites/default/config/core.entity_form_display.group.bureau_office.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.bureau_office.default.yml
@@ -15,6 +15,7 @@ dependencies:
     - field.field.group.bureau_office.field_enable_programs_menu_item
     - field.field.group.bureau_office.field_enable_projects_menu_item
     - field.field.group.bureau_office.field_enable_services_and_inform
+    - field.field.group.bureau_office.field_feature_on_homepage
     - field.field.group.bureau_office.field_legacy_path
     - field.field.group.bureau_office.field_logo
     - field.field.group.bureau_office.field_official_organization_name
@@ -32,6 +33,7 @@ dependencies:
     - field_group
     - image
     - maxlength
+    - paragraphs
 third_party_settings:
   field_group:
     group_contact_information:
@@ -162,8 +164,27 @@ content:
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
-  field_legacy_path:
+  field_feature_on_homepage:
+    type: paragraphs
     weight: 10
+    settings:
+      title: Feature
+      title_plural: Features
+      edit_mode: closed_expand_nested
+      closed_mode: preview
+      autocollapse: none
+      closed_mode_threshold: 0
+      add_mode: button
+      form_display_mode: default
+      default_paragraph_type: _none
+      features:
+        duplicate: duplicate
+        collapse_edit_all: collapse_edit_all
+        add_above: '0'
+    third_party_settings: {  }
+    region: content
+  field_legacy_path:
+    weight: 11
     settings:
       size: 60
       placeholder: ''
