--- a/web/sites/default/config/core.entity_form_display.group.project.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.project.default.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.field.group.project.field_enable_guides_and_informat
     - field.field.group.project.field_enable_news_and_notices_me
     - field.field.group.project.field_enable_projects_menu_item
+    - field.field.group.project.field_feature_on_homepage
     - field.field.group.project.field_legacy_path
     - field.field.group.project.field_parent_group
     - field.field.group.project.field_shortname_or_acronym
@@ -21,6 +22,7 @@ dependencies:
     - datetime_range
     - field_group
     - maxlength
+    - paragraphs
 third_party_settings:
   field_group:
     group_site_menu:
@@ -92,8 +94,27 @@ content:
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
-  field_legacy_path:
+  field_feature_on_homepage:
     weight: 8
+    settings:
+      title: Feature
+      title_plural: Features
+      edit_mode: closed_expand_nested
+      closed_mode: preview
+      autocollapse: none
+      closed_mode_threshold: 0
+      add_mode: button
+      form_display_mode: default
+      default_paragraph_type: _none
+      features:
+        duplicate: duplicate
+        collapse_edit_all: collapse_edit_all
+        add_above: '0'
+    third_party_settings: {  }
+    type: paragraphs
+    region: content
+  field_legacy_path:
+    weight: 9
     settings:
       size: 60
       placeholder: ''
