--- a/web/sites/default/config/core.entity_view_display.group.bureau_office.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.group.bureau_office.featured.yml
@@ -1,8 +1,9 @@
-uuid: e2778318-415d-463a-bbd0-0fc09a301421
+uuid: 2555f41b-5efb-4270-9ac5-ac384f5918a1
 langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.group.featured
     - field.field.group.bureau_office.field_address
     - field.field.group.bureau_office.field_audience
     - field.field.group.bureau_office.field_building
@@ -27,70 +28,47 @@ dependencies:
     - group.type.bureau_office
   module:
     - ds
-    - entity_reference_revisions
 third_party_settings:
   ds:
     layout:
-      id: layout_onecol
-      library: layout_discovery/onecol
+      id: cloudy_featured-with-image
+      library: null
       disable_css: false
       entity_classes: all_classes
-      settings: {  }
+      settings:
+        wrappers:
+          first: div
+          second: div
+        outer_wrapper: div
+        attributes: ''
+        link_attribute: ''
+        link_custom: ''
+        classes:
+          layout_class: {  }
     regions:
-      content:
+      first:
+        - label
         - field_summary
-        - group_site_menu_entity_view_1
-        - field_feature_on_homepage
-id: group.bureau_office.default
+id: group.bureau_office.featured
 targetEntityType: group
 bundle: bureau_office
-mode: default
+mode: featured
 content:
-  field_feature_on_homepage:
-    type: entity_reference_revisions_entity_view
-    weight: 2
-    label: above
-    settings:
-      view_mode: default
-      link: ''
-    third_party_settings:
-      ds:
-        ds_limit: ''
-        ft:
-          id: expert
-          settings:
-            lb: Featured
-            prefix: ''
-            lbw: true
-            lbw-el: h2
-            lbw-cl: 'featured mt-3'
-            lbw-at: ''
-            ow-el: ''
-            ow-cl: ''
-            ow-at: ''
-            fis: true
-            fis-el: div
-            fis-cl: card-columns
-            fis-at: ''
-            fi-el: ''
-            fi-cl: ''
-            fi-at: ''
-            suffix: ''
-            lb-col: false
-            ow: false
-            ow-def-at: false
-            ow-def-cl: false
-            fis-def-at: false
-            fi: false
-            fi-def-at: false
-    region: content
   field_summary:
     type: string
-    weight: 0
-    region: content
+    weight: 1
+    region: first
     label: hidden
     settings:
       link_to_entity: false
+    third_party_settings: {  }
+  label:
+    type: string
+    weight: 0
+    region: first
+    label: hidden
+    settings:
+      link_to_entity: true
     third_party_settings:
       ds:
         ft:
@@ -108,8 +86,8 @@ content:
             fis-cl: ''
             fis-at: ''
             fi: true
-            fi-el: p
-            fi-cl: lead
+            fi-el: h3
+            fi-cl: ''
             fi-at: ''
             suffix: ''
             lbw: false
@@ -120,11 +98,6 @@ content:
             fis: false
             fis-def-at: false
             fi-def-at: false
-  group_site_menu_entity_view_1:
-    weight: 1
-    region: content
-    settings: {  }
-    third_party_settings: {  }
 hidden:
   changed: true
   created: true
@@ -140,6 +113,7 @@ hidden:
   field_enable_programs_menu_item: true
   field_enable_projects_menu_item: true
   field_enable_services_and_inform: true
+  field_feature_on_homepage: true
   field_legacy_path: true
   field_logo: true
   field_official_organization_name: true
@@ -147,5 +121,5 @@ hidden:
   field_phone: true
   field_shortname_or_acronym: true
   field_topics: true
-  label: true
+  group_site_menu_entity_view_1: true
   uid: true
