--- a/web/sites/default/config/core.entity_view_display.group.program.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.group.program.featured.yml
@@ -1,9 +1,9 @@
-uuid: 010bfcca-383e-469c-8412-41468d6722a7
+uuid: 1fc0038b-aeed-4fa6-a878-e103095c3cac
 langcode: en
 status: true
 dependencies:
   config:
-    - core.entity_view_mode.group.teaser
+    - core.entity_view_mode.group.featured
     - field.field.group.program.field_address
     - field.field.group.program.field_audience
     - field.field.group.program.field_building
@@ -25,36 +25,73 @@ dependencies:
     - group.type.program
   module:
     - ds
-id: group.program.teaser
+third_party_settings:
+  ds:
+    layout:
+      id: cloudy_featured-with-image
+      library: null
+      disable_css: false
+      entity_classes: all_classes
+      settings:
+        wrappers:
+          first: div
+          second: div
+        outer_wrapper: div
+        attributes: ''
+        link_attribute: ''
+        link_custom: ''
+        classes:
+          layout_class: {  }
+    regions:
+      first:
+        - label
+        - field_summary
+id: group.program.featured
 targetEntityType: group
 bundle: program
-mode: teaser
+mode: featured
 content:
   field_summary:
-    type: string
     weight: 1
-    region: content
-    label: hidden
     settings:
       link_to_entity: false
     third_party_settings:
       ds:
         ft:
-          id: default
+          id: expert
           settings:
             lb: ''
+            prefix: ''
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi: true
+            fi-el: p
+            fi-cl: lead
+            fi-at: ''
+            suffix: ''
+            lbw: false
             lb-col: false
-            classes: {  }
-  group_site_menu_entity_view_1:
-    weight: 10
-    region: content
-    settings: {  }
-    third_party_settings: {  }
-  label:
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi-def-at: false
+    region: first
+    type: string
     label: hidden
+  label:
     type: string
     weight: 0
-    region: content
+    region: first
+    label: hidden
     settings:
       link_to_entity: true
     third_party_settings:
@@ -67,24 +104,24 @@ content:
             lbw-el: ''
             lbw-cl: ''
             lbw-at: ''
-            ow: true
-            ow-el: h2
+            ow-el: ''
             ow-cl: ''
             ow-at: ''
             fis-el: ''
             fis-cl: ''
             fis-at: ''
-            fi-el: ''
+            fi: true
+            fi-el: h3
             fi-cl: ''
             fi-at: ''
             suffix: ''
             lbw: false
             lb-col: false
+            ow: false
             ow-def-at: false
             ow-def-cl: false
             fis: false
             fis-def-at: false
-            fi: false
             fi-def-at: false
 hidden:
   changed: true
@@ -106,4 +143,5 @@ hidden:
   field_phone: true
   field_shortname_or_acronym: true
   field_topics: true
+  group_site_menu_entity_view_1: true
   uid: true
