--- a/web/sites/default/config/core.entity_view_display.group.project.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.group.project.featured.yml
@@ -1,8 +1,9 @@
-uuid: efa912d6-45f6-4262-999d-a4e949371bf1
+uuid: f30faec3-a50f-4ee8-91bd-531fa12d10f1
 langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.group.featured
     - field.field.group.project.field_audience
     - field.field.group.project.field_date_time_range
     - field.field.group.project.field_enable_documents_menu_item
@@ -10,7 +11,6 @@ dependencies:
     - field.field.group.project.field_enable_guides_and_informat
     - field.field.group.project.field_enable_news_and_notices_me
     - field.field.group.project.field_enable_projects_menu_item
-    - field.field.group.project.field_feature_on_homepage
     - field.field.group.project.field_legacy_path
     - field.field.group.project.field_parent_group
     - field.field.group.project.field_shortname_or_acronym
@@ -18,104 +18,33 @@ dependencies:
     - field.field.group.project.field_topics
     - group.type.project
   module:
-    - datetime_range
     - ds
-    - entity_reference_revisions
 third_party_settings:
   ds:
     layout:
-      id: layout_onecol
-      library: layout_discovery/onecol
+      id: cloudy_featured-with-image
+      library: null
       disable_css: false
       entity_classes: all_classes
-      settings: {  }
+      settings:
+        wrappers:
+          first: div
+          second: div
+        outer_wrapper: div
+        attributes: ''
+        link_attribute: ''
+        link_custom: ''
+        classes:
+          layout_class: {  }
     regions:
-      content:
-        - field_date_time_range
+      first:
+        - label
         - field_summary
-        - group_site_menu_entity_view_1
-        - field_feature_on_homepage
-id: group.project.default
+id: group.project.featured
 targetEntityType: group
 bundle: project
-mode: default
+mode: featured
 content:
-  field_date_time_range:
-    type: daterange_default
-    weight: 0
-    region: content
-    label: inline
-    settings:
-      timezone_override: ''
-      format_type: month_day_year
-      separator: ' to '
-    third_party_settings:
-      ds:
-        ft:
-          id: expert
-          settings:
-            lb: ' '
-            prefix: ''
-            lbw: true
-            lbw-el: h2
-            lbw-cl: sr-only
-            lbw-at: ''
-            ow-el: ''
-            ow-cl: ''
-            ow-at: ''
-            fis-el: ''
-            fis-cl: ''
-            fis-at: ''
-            fi: true
-            fi-el: p
-            fi-cl: small
-            fi-at: ''
-            suffix: ''
-            lb-col: false
-            ow: false
-            ow-def-at: false
-            ow-def-cl: false
-            fis: false
-            fis-def-at: false
-            fi-def-at: false
-  field_feature_on_homepage:
-    weight: 3
-    label: above
-    settings:
-      view_mode: default
-      link: ''
-    third_party_settings:
-      ds:
-        ds_limit: ''
-        ft:
-          id: expert
-          settings:
-            lb: Featured
-            prefix: ''
-            lbw: true
-            lbw-el: h2
-            lbw-cl: 'featured mt-3'
-            lbw-at: ''
-            ow-el: ''
-            ow-cl: ''
-            ow-at: ''
-            fis: true
-            fis-el: div
-            fis-cl: card-columns
-            fis-at: ''
-            fi-el: ''
-            fi-cl: ''
-            fi-at: ''
-            suffix: ''
-            lb-col: false
-            ow: false
-            ow-def-at: false
-            ow-def-cl: false
-            fis-def-at: false
-            fi: false
-            fi-def-at: false
-    type: entity_reference_revisions_entity_view
-    region: content
   field_summary:
     weight: 1
     label: hidden
@@ -138,8 +67,8 @@ content:
             fis-cl: ''
             fis-at: ''
             fi: true
-            fi-el: p
-            fi-cl: lead
+            fi-el: div
+            fi-cl: card-text
             fi-at: ''
             suffix: ''
             lbw: false
@@ -151,16 +80,48 @@ content:
             fis-def-at: false
             fi-def-at: false
     type: string
-    region: content
-  group_site_menu_entity_view_1:
-    weight: 2
-    region: content
-    settings: {  }
-    third_party_settings: {  }
+    region: first
+  label:
+    type: string
+    weight: 0
+    region: first
+    label: hidden
+    settings:
+      link_to_entity: true
+    third_party_settings:
+      ds:
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: ''
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi: true
+            fi-el: h3
+            fi-cl: ''
+            fi-at: ''
+            suffix: ''
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi-def-at: false
 hidden:
   changed: true
   created: true
   field_audience: true
+  field_date_time_range: true
   field_enable_documents_menu_item: true
   field_enable_events_menu_item: true
   field_enable_guides_and_informat: true
@@ -170,5 +131,5 @@ hidden:
   field_parent_group: true
   field_shortname_or_acronym: true
   field_topics: true
-  label: true
+  group_site_menu_entity_view_1: true
   uid: true
