--- a/web/sites/default/config/core.entity_view_display.node.page.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.node.page.featured.yml
@@ -1,8 +1,9 @@
-uuid: 61e06098-c992-45dc-b467-ba132bf0d064
+uuid: 8faf457c-9012-4b10-9b35-c8b57f424a82
 langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.node.featured
     - field.field.node.page.field_audience
     - field.field.node.page.field_body_content
     - field.field.node.page.field_group
@@ -16,7 +17,6 @@ dependencies:
   module:
     - ds
     - panelizer
-    - text
     - user
 third_party_settings:
   panelizer:
@@ -26,29 +26,46 @@ third_party_settings:
     default: default
   ds:
     layout:
-      id: layout_onecol
-      library: layout_discovery/onecol
+      id: cloudy_featured-with-image
+      library: null
       disable_css: false
       entity_classes: all_classes
-      settings: {  }
+      settings:
+        wrappers:
+          first: div
+          second: div
+        outer_wrapper: div
+        attributes: ''
+        link_attribute: ''
+        link_custom: ''
+        classes:
+          layout_class: {  }
     regions:
-      content:
+      first:
         - field_page_type
+        - node_title
         - field_summary
-        - field_body_content
-        - field_related_content
-id: node.page.default
+    fields:
+      node_title:
+        plugin_id: node_title
+        weight: 1
+        label: hidden
+        formatter: default
+        settings:
+          link: true
+          wrapper: h3
+          class: ''
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+id: node.page.featured
 targetEntityType: node
 bundle: page
-mode: default
+mode: featured
 content:
-  field_body_content:
-    weight: 2
-    label: hidden
-    settings: {  }
-    third_party_settings: {  }
-    type: text_default
-    region: content
   field_page_type:
     weight: 0
     label: hidden
@@ -84,17 +101,9 @@ content:
             fis-def-at: false
             fi-def-at: false
     type: entity_reference_label
-    region: content
-  field_related_content:
-    weight: 3
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
+    region: first
   field_summary:
-    weight: 1
+    weight: 2
     label: hidden
     settings:
       link_to_entity: false
@@ -115,8 +124,8 @@ content:
             fis-cl: ''
             fis-at: ''
             fi: true
-            fi-el: p
-            fi-cl: lead
+            fi-el: div
+            fi-cl: body-text
             fi-at: ''
             suffix: ''
             lbw: false
@@ -128,12 +137,14 @@ content:
             fis-def-at: false
             fi-def-at: false
     type: string
-    region: content
+    region: first
 hidden:
   content_moderation_control: true
   field_audience: true
+  field_body_content: true
   field_group: true
   field_legacy_path: true
+  field_related_content: true
   field_reviewer: true
   field_topics: true
   links: true
