--- a/web/sites/default/config/views.view.group_programs.yml
+++ b/web/sites/default/config/views.view.group_programs.yml
@@ -395,8 +395,25 @@ display:
       defaults:
         fields: false
         empty: false
+        style: false
+        row: false
       block_hide_empty: true
       empty: {  }
+      style:
+        type: grid
+        options:
+          grouping: {  }
+          columns: 3
+          automatic_width: false
+          alignment: horizontal
+          col_class_default: false
+          col_class_custom: col-4
+          row_class_default: false
+          row_class_custom: row
+      row:
+        type: 'entity:group'
+        options:
+          view_mode: default
     cache_metadata:
       max-age: -1
       contexts:
