--- a/web/sites/default/config/core.entity_view_display.node.city_service.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.node.city_service.featured.yml
@@ -1,8 +1,9 @@
-uuid: 8408f949-3466-4c63-af35-91b46361af70
+uuid: 74945cb6-3170-426b-a4f7-43d08c91b0bf
 langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.node.featured
     - field.field.node.city_service.field_audience
     - field.field.node.city_service.field_community_actions
     - field.field.node.city_service.field_group
@@ -18,7 +19,6 @@ dependencies:
   module:
     - ds
     - panelizer
-    - paragraphs
     - user
 third_party_settings:
   panelizer:
@@ -28,41 +28,50 @@ third_party_settings:
     default: default
   ds:
     layout:
-      id: layout_onecol
-      library: layout_discovery/onecol
+      id: cloudy_featured-with-image
+      library: null
       disable_css: false
       entity_classes: all_classes
-      settings: {  }
+      settings:
+        wrappers:
+          first: div
+          second: div
+        outer_wrapper: div
+        attributes: ''
+        link_attribute: ''
+        link_custom: ''
+        classes:
+          layout_class: {  }
     regions:
-      content:
+      first:
+        - node_title
         - field_summary
-        - field_time_to_complete
-        - field_service_mode
-id: node.city_service.default
+    fields:
+      node_title:
+        plugin_id: node_title
+        weight: 0
+        label: hidden
+        formatter: default
+        settings:
+          link: true
+          wrapper: h3
+          class: ''
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+id: node.city_service.featured
 targetEntityType: node
 bundle: city_service
-mode: default
+mode: featured
 content:
-  field_service_mode:
-    type: paragraph_summary
-    weight: 2
-    region: content
-    label: above
-    settings: {  }
-    third_party_settings: {  }
   field_summary:
     type: string
-    weight: 0
-    region: content
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-  field_time_to_complete:
-    type: string
     weight: 1
-    region: content
-    label: above
+    region: first
+    label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
@@ -75,6 +84,8 @@ hidden:
   field_popular: true
   field_related_content: true
   field_reviewer: true
+  field_service_mode: true
+  field_time_to_complete: true
   field_topics: true
   links: true
   scheduled_publication: true
