POWR-681 add reviewer field to events; make sure my content, group, and sitewide views have page content type

--- a/web/sites/default/config/core.entity_form_display.node.event.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.event.default.yml
@@ -11,6 +11,7 @@ dependencies:
     - field.field.node.event.field_event_location
     - field.field.node.event.field_group
     - field.field.node.event.field_legacy_path
+    - field.field.node.event.field_reviewer
     - field.field.node.event.field_start_date
     - field.field.node.event.field_start_time
     - field.field.node.event.field_summary
@@ -112,18 +113,27 @@ content:
     third_party_settings: {  }
     region: content
   field_group:
-    weight: 13
+    weight: 14
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
     region: content
   field_legacy_path:
-    weight: 15
+    weight: 17
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
+    region: content
+  field_reviewer:
+    weight: 15
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
     region: content
   field_start_date:
     weight: 7
@@ -171,7 +181,7 @@ content:
     region: content
   moderation_state:
     type: moderation_state_default
-    weight: 14
+    weight: 16
     settings: {  }
     region: content
     third_party_settings: {  }
