--- a/web/sites/default/config/core.entity_view_display.node.notification.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.notification.teaser.yml
@@ -5,27 +5,71 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.notification.field_action_link
+    - field.field.node.notification.field_group
     - field.field.node.notification.field_notification_severity
+    - field.field.node.notification.field_reviewer
     - field.field.node.notification.field_summary
     - node.type.notification
   module:
+    - ds
+    - media_entity_twitter
+    - options
+    - panelizer
     - user
+third_party_settings:
+  panelizer:
+    enable: false
+    custom: false
+    allow: false
+    default: default
+  ds:
+    layout:
+      id: layout_onecol
+      library: layout_discovery/onecol
+      disable_css: false
+      entity_classes: all_classes
+      settings: {  }
+    regions:
+      content:
+        - node_title
+        - field_summary
+        - field_notification_severity
+        - field_action_link
+    fields:
+      node_title:
+        plugin_id: node_title
+        weight: 0
+        label: hidden
+        formatter: default
 id: node.notification.teaser
 targetEntityType: node
 bundle: notification
 mode: teaser
 content:
-  content_moderation_control:
-    weight: -20
+  field_action_link:
+    type: twitter_embed
+    weight: 3
+    region: content
+    label: above
     settings: {  }
     third_party_settings: {  }
+  field_notification_severity:
+    type: list_default
+    weight: 2
     region: content
-  links:
-    weight: 100
-    region: content
+    label: above
     settings: {  }
+    third_party_settings: {  }
+  field_summary:
+    type: string
+    weight: 1
+    region: content
+    label: above
+    settings:
+      link_to_entity: false
     third_party_settings: {  }
 hidden:
-  field_action_link: true
-  field_notification_severity: true
-  field_summary: true
+  content_moderation_control: true
+  field_group: true
+  field_reviewer: true
+  links: true
