--- a/web/sites/default/config/views.view.admin_group_content.yml
+++ b/web/sites/default/config/views.view.admin_group_content.yml
@@ -1149,6 +1149,7 @@ display:
       tags:
         - 'config:field.storage.node.field_reviewer'
         - 'config:workflow_list'
+        - extensions
   page_1:
     display_plugin: page
     id: page_1
@@ -1179,3 +1180,4 @@ display:
       tags:
         - 'config:field.storage.node.field_reviewer'
         - 'config:workflow_list'
+        - extensions
