--- a/web/sites/default/config/views.view.group_services.yml
+++ b/web/sites/default/config/views.view.group_services.yml
@@ -269,9 +269,9 @@ display:
           group_type: group
           admin_label: ''
           order: DESC
-          exposed: false
+          exposed: true
           expose:
-            label: ''
+            label: Popular
           plugin_id: standard
         title:
           id: title
@@ -281,9 +281,9 @@ display:
           group_type: group
           admin_label: ''
           order: ASC
-          exposed: false
+          exposed: true
           expose:
-            label: ''
+            label: Title
           entity_type: node
           entity_field: title
           plugin_id: standard
@@ -361,6 +361,7 @@ display:
         - 'languages:language_interface'
         - route
         - url
+        - 'url.query_args:sort_by'
         - 'user.node_grants:view'
         - user.permissions
       tags: {  }
@@ -449,6 +450,7 @@ display:
         - 'languages:language_interface'
         - route
         - url
+        - 'url.query_args:sort_by'
         - 'user.node_grants:view'
         - user.permissions
       tags: {  }
