--- a/web/sites/default/config/views.view.my_content.yml
+++ b/web/sites/default/config/views.view.my_content.yml
@@ -5,10 +5,12 @@ dependencies:
   config:
     - field.storage.node.field_reviewer
     - node.type.city_service
+    - node.type.event
     - node.type.guide
     - node.type.information
     - node.type.news
     - node.type.notification
+    - node.type.page
     - system.menu.editor-toolbar
     - user.role.authenticated
   module:
@@ -776,10 +778,12 @@ display:
           admin_label: ''
           operator: in
           value:
+            event: event
             guide: guide
             information: information
             news: news
             notification: notification
+            page: page
             city_service: city_service
           group: 1
           exposed: true
@@ -1093,6 +1097,7 @@ display:
       tags:
         - 'config:field.storage.node.field_reviewer'
         - 'config:workflow_list'
+        - extensions
   page_1:
     display_plugin: page
     id: page_1
@@ -1123,3 +1128,4 @@ display:
       tags:
         - 'config:field.storage.node.field_reviewer'
         - 'config:workflow_list'
+        - extensions
