--- a/web/sites/default/config/core.entity_form_display.node.news.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.news.default.yml
@@ -35,7 +35,7 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 16
+    weight: 11
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -140,7 +140,7 @@ content:
     type: chosen_select
     region: content
   field_legacy_path:
-    weight: 13
+    weight: 9
     region: content
     type: string_textfield
     settings:
@@ -148,13 +148,13 @@ content:
       size: 60
     third_party_settings: {  }
   field_published_on:
-    weight: 9
+    weight: 14
     settings: {  }
     third_party_settings: {  }
     type: datetime_default
     region: content
   field_reviewer:
-    weight: 11
+    weight: 15
     settings:
       match_operator: CONTAINS
       size: 60
@@ -183,22 +183,15 @@ content:
     region: content
   moderation_state:
     type: moderation_state_default
-    weight: 10
+    weight: 16
     region: content
     settings: {  }
     third_party_settings: {  }
   path:
     type: path
-    weight: 17
+    weight: 13
     region: content
     settings: {  }
-    third_party_settings: {  }
-  status:
-    type: boolean_checkbox
-    weight: 12
-    region: content
-    settings:
-      display_label: true
     third_party_settings: {  }
   title:
     type: string_textfield
@@ -210,7 +203,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 15
+    weight: 10
     region: content
     settings:
       match_operator: CONTAINS
@@ -218,10 +211,11 @@ content:
       placeholder: ''
     third_party_settings: {  }
   url_redirects:
-    weight: 14
+    weight: 12
     region: content
     settings: {  }
     third_party_settings: {  }
 hidden:
   promote: true
+  status: true
   sticky: true
