--- a/web/sites/default/config/core.entity_form_display.node.notification.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.notification.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.notification.field_action_link
     - field.field.node.notification.field_group
     - field.field.node.notification.field_notification_severity
+    - field.field.node.notification.field_reviewer
     - field.field.node.notification.field_summary
     - node.type.notification
   module:
@@ -44,6 +45,15 @@ content:
     third_party_settings: {  }
     type: options_select
     region: content
+  field_reviewer:
+    weight: 9
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
+    region: content
   field_summary:
     weight: 2
     settings:
@@ -69,13 +79,6 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
-  status:
-    type: boolean_checkbox
-    settings:
-      display_label: true
-    weight: 9
-    region: content
-    third_party_settings: {  }
   title:
     type: string_textfield
     weight: 0
@@ -100,4 +103,5 @@ content:
     third_party_settings: {  }
 hidden:
   promote: true
+  status: true
   sticky: true
