--- a/web/sites/default/config/core.entity_view_display.node.notification.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.notification.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.notification.field_action_link
     - field.field.node.notification.field_group
     - field.field.node.notification.field_notification_severity
+    - field.field.node.notification.field_reviewer
     - field.field.node.notification.field_summary
     - node.type.notification
   module:
@@ -36,14 +37,6 @@ content:
     third_party_settings: {  }
     type: link
     region: content
-  field_group:
-    weight: 3
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
   field_notification_severity:
     weight: 0
     label: above
@@ -61,4 +54,6 @@ content:
     region: content
 hidden:
   content_moderation_control: true
+  field_group: true
+  field_reviewer: true
   links: true
