POWR-712 Add config split import call to CircleCI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -129,15 +129,23 @@ behat_tests: &behat_tests
               if [ "$i" = "12" ]; then set -e; fi
               terminus remote:drush portlandor.dev -- cim -y
               if [ "$?" = "0" ]; then break; fi
-              sleep 10; 
+              sleep 10;
+            done
+            # try to import split config
+            for i in {1..6};
+            do
+              if [ "$i" = "6" ]; then set -e; fi
+              terminus remote:drush portlandor.dev -- csim -y
+              if [ "$?" = "0" ]; then break; fi
+              sleep 10;
             done
             # try drush cr
-            for i in {1..12}; 
+            for i in {1..12};
             do
               if [ "$i" = "12" ]; then set -e; fi
               terminus remote:drush portlandor.dev -- cr
               if [ "$?" = "0" ]; then break; fi
-              sleep 10; 
+              sleep 10;
             done
             # try drush updb
             for i in {1..12};
@@ -145,7 +153,7 @@ behat_tests: &behat_tests
               if [ "$i" = "12" ]; then set -e; fi
               terminus remote:drush portlandor.dev -- -y updb
               if [ "$?" = "0" ]; then break; fi
-              sleep 10; 
+              sleep 10;
             done
             set -e
             # echo 'node_access_rebuild();' | $(terminus remote:drush portlandor.dev -- php-script)
@@ -201,28 +209,36 @@ behat_tests: &behat_tests
             # try to run drush cim
             # ignore errors only check error at the last try of drush commands
             set +e
-            for i in {1..6}; 
+            for i in {1..6};
             do
               if [ "$i" = "6" ]; then set -e; fi
               terminus remote:drush portlandor.$CIRCLE_BRANCH -- cim -y
               if [ "$?" = "0" ]; then break; fi
-              sleep 10; 
+              sleep 10;
+            done
+            # try to import split config
+            for i in {1..6};
+            do
+              if [ "$i" = "6" ]; then set -e; fi
+              terminus remote:drush portlandor.$CIRCLE_BRANCH -- csim -y
+              if [ "$?" = "0" ]; then break; fi
+              sleep 10;
             done
             # try drush cr
-            for i in {1..6}; 
+            for i in {1..6};
             do
               if [ "$i" = "6" ]; then set -e; fi
               terminus remote:drush portlandor.$CIRCLE_BRANCH -- cr
               if [ "$?" = "0" ]; then break; fi
-              sleep 10; 
+              sleep 10;
             done
             # try drush updb
-            for i in {1..6}; 
+            for i in {1..6};
             do
               if [ "$i" = "6" ]; then set -e; fi
               terminus remote:drush portlandor.$CIRCLE_BRANCH -- -y updb
               if [ "$?" = "0" ]; then break; fi
-              sleep 10; 
+              sleep 10;
             done
             set -e
             # echo 'node_access_rebuild();' | $(terminus drush portlandor.$CIRCLE_BRANCH -- php-script)
