--- a/web/sites/default/config/core.entity_form_display.media.document.default.yml
+++ b/web/sites/default/config/core.entity_form_display.media.document.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.media.document.field_document
+    - field.field.media.document.field_document_type
     - field.field.media.document.field_file_size
     - field.field.media.document.field_group
     - field.field.media.document.field_media_in_library
@@ -22,20 +23,26 @@ bundle: document
 mode: default
 content:
   field_document:
-    weight: 2
+    weight: 3
     settings:
       progress_indicator: throbber
     third_party_settings: {  }
     type: file_generic
     region: content
+  field_document_type:
+    weight: 1
+    settings: {  }
+    third_party_settings: {  }
+    type: chosen_select
+    region: content
   field_group:
-    weight: 3
+    weight: 4
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
     region: content
   field_summary:
-    weight: 1
+    weight: 2
     settings:
       rows: 2
       placeholder: ''
@@ -49,7 +56,7 @@ content:
     region: content
   moderation_state:
     type: moderation_state_default
-    weight: 5
+    weight: 6
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -63,7 +70,7 @@ content:
     region: content
   status:
     type: boolean_checkbox
-    weight: 4
+    weight: 5
     region: content
     settings:
       display_label: true
