POWR-737 update to button default

--- a/web/sites/default/config/views.view.service_location_directions_link.yml
+++ b/web/sites/default/config/views.view.service_location_directions_link.yml
@@ -404,7 +404,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: '<a class="btn btn-cta" href="https://www.google.com/maps/dir/''''/{{ field_address_address_line1 }}{{ field_address_address_line2 }}{{ field_floor }}{{ field_address_locality }}{{ field_address_administrative_area }}{{ field_address_postal_code }}/"><i class="fas fa-map-marker-alt"></i> Get directions</a>'
+            text: '<a class="btn powr-btn-link" href="https://www.google.com/maps/dir/{{ field_address_address_line1 }}{{ field_address_address_line2 }}{{ field_floor }}{{ field_address_locality }}{{ field_address_administrative_area }}{{ field_address_postal_code }}/"><i class="fas fa-map-marker-alt"></i>Get directions</a>'
             make_link: false
             path: ''
             absolute: false
@@ -541,6 +541,7 @@ display:
         - user.permissions
       tags:
         - 'config:field.storage.node.field_floor'
+        - extensions
   entity_view_1:
     display_plugin: entity_view
     id: entity_view_1
@@ -562,3 +563,4 @@ display:
         - user.permissions
       tags:
         - 'config:field.storage.node.field_floor'
+        - extensions
