POWR-655 Focal point for featured images

--- a/web/sites/default/config/core.entity_form_display.node.news.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.news.default.yml
@@ -22,7 +22,7 @@ dependencies:
     - conditional_fields
     - content_moderation
     - datetime
-    - image
+    - focal_point
     - lightning_media
     - maxlength
     - paragraphs
@@ -106,10 +106,12 @@ content:
     type: datetime_default
     region: content
   field_featured_image:
-    type: image_image
+    type: image_focal_point
     weight: 3
     settings:
       preview_image_style: thumbnail
+      preview_link: true
+      offsets: '50,50'
       progress_indicator: throbber
     region: content
     third_party_settings:
