--- a/web/sites/default/config/core.entity_view_display.node.news.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.featured.yml
@@ -5,19 +5,22 @@ dependencies:
   config:
     - core.entity_view_mode.node.featured
     - field.field.node.news.field_body
+    - field.field.node.news.field_body_content
     - field.field.node.news.field_feature_this_content
     - field.field.node.news.field_feature_until
     - field.field.node.news.field_featured_image
+    - field.field.node.news.field_group
     - field.field.node.news.field_legacy_path
     - field.field.node.news.field_published_on
+    - field.field.node.news.field_reviewer
     - field.field.node.news.field_summary
     - field.field.node.news.field_topics
-    - image.style.medium
     - node.type.news
+    - responsive_image.styles.picture_featured
   module:
     - ds
-    - image
     - panelizer
+    - responsive_image
     - user
 third_party_settings:
   panelizer:
@@ -69,13 +72,13 @@ bundle: news
 mode: featured
 content:
   field_featured_image:
-    type: image
+    type: responsive_image
     weight: 2
     region: second
     label: hidden
     settings:
-      image_style: medium
-      image_link: content
+      responsive_image_style: picture_featured
+      image_link: ''
     third_party_settings:
       ds:
         ft:
