POWR-714 - added patch with group context for behat, renamed a test

--- a/tests/behat.yml
+++ b/tests/behat.yml
@@ -3,6 +3,7 @@ default:
     default:
       contexts:
         - FeatureContext
+        - GroupBehatContext # is this the correct namespace?
         - Drupal\DrupalExtension\Context\DrupalContext
         - Drupal\DrupalExtension\Context\MinkContext
         - Drupal\DrupalExtension\Context\MessageContext
@@ -42,3 +43,6 @@ default:
         success_message_selector: '.alert.alert-success'
       drush:
         binary: drush
+      subcontexts:
+        paths:
+          - "/app/web/modules/contrib/group"
