POWR-686 update to Drupal 8.6.10

--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         }
     },
     "require": {
-        "acquia/lightning": "3.2.4",
+        "acquia/lightning": "3.2.5",
         "bower-asset/cropper": "^2.3",
         "composer/installers": "^1.2",
         "cweagans/composer-patches": "^1.6",
@@ -113,7 +113,7 @@
         "jcalderonzumba/gastonjs": "~1.0.2",
         "jcalderonzumba/mink-phantomjs-driver": "~0.3.1",
         "mikey179/vfsstream": "~1.2",
-        "phpunit/phpunit": ">=4.8.28 <5",
+        "phpunit/phpunit": "^4.8",
         "symfony/css-selector": "~2.8|~3.0"
     },
     "conflict": {
@@ -169,9 +169,6 @@
             },
             "drupal/easy_breadcrumb": {
                 "2979389 - Titles in breadcrumbs are 'double-escaped'": "https://www.drupal.org/files/issues/2018-06-21/2979389-7-easy-breadcrumb--double-escaped-titles.patch"            
-            },
-            "drupal/conditional_fields": {
-                "2834358 - 'Uninitialized string offset: 0 in conditional_fields_evaluate_dependency()' when saving node form with conditional fields applied": "https://www.drupal.org/files/issues/conditional_fields-uninitialized_string_offset_in_conditional_fields_evaluate_dependency-2834358-11.patch"
             },
             "drupal/embed": {
                 "2824110 - Allow site-builders to use a non-managed file as button icon": "https://www.drupal.org/files/issues/2018-07-03/embed-allow-non-managed-button-icon-files-2824110-9.patch"
