Enable Google Analytics Reports module

--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -182,3 +182,8 @@ mailsystem: 4.1.0
 sendgrid_integration: 1.2.0
 seckit: 1.1.0
 remove_http_headers: 1.0.0-alpha3
+google_analytics_reports_api: 3.0.0-beta2
+google_analytics_reports: 3.0.0-beta2
+charts: 3.0.0-beta2
+charts_google: 3.0.0-beta2
+charts_highcharts: 3.0.0-beta2
