--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
         "drupal/adminimal_theme": "^1.3",
         "drupal/allowed_formats": "^1.1",
         "drupal/anonymous_login": "^1.1",
+        "drupal/charts": "^3.0@beta",
         "drupal/chosen": "^2.5",
         "drupal/clamav": "^1.0",
         "drupal/components": "^1.0",
@@ -58,6 +59,7 @@
         "drupal/field_permissions": "^1.0@RC",
         "drupal/fixed_block_content": "^1.0",
         "drupal/google_analytics": "^2.3",
+        "drupal/google_analytics_reports": "^3.0@beta",
         "drupal/group": "^1.0",
         "drupal/groupmedia": "^2.0@alpha",
         "drupal/hsts": "^1.0",
@@ -175,6 +177,9 @@
             },
             "drupal/embed": {
                 "2824110 - Allow site-builders to use a non-managed file as button icon": "https://www.drupal.org/files/issues/2018-07-03/embed-allow-non-managed-button-icon-files-2824110-9.patch"
+            },
+            "drupal/google_analytics_reports": {
+                "2850463 - Fix Error whenever saving either of the provided google_analytics_reports view without any customization": "https://www.drupal.org/files/issues/2019-02-08/google-analytics-reports-views-start-date-value-type-doesnt-exist-2850463-32-D8.patch"
             }
         },
         "merge-plugin": {
