--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -10,6 +10,9 @@ module:
   block: 0
   block_content: 0
   breakpoint: 0
+  charts: 0
+  charts_google: 0
+  charts_highcharts: 0
   chosen: 0
   chosen_field: 0
   chosen_lib: 0
@@ -59,6 +62,8 @@ module:
   fixed_block_content: 0
   gnode: 0
   google_analytics: 0
+  google_analytics_reports: 0
+  google_analytics_reports_api: 0
   group: 0
   groupmedia: 0
   hal: 0
