--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -106,6 +106,8 @@ behat_tests: &behat_tests
           cd web/themes/custom/cloudy && npm run build && cd /var/www/html
           # Add all files before pushing to Pantheon
           rm -rf web/themes/custom/cloudy/node_modules
+          echo "Copy the patched file..."
+          cp ./GoogleAnalyticsReports.php web/modules/contrib/google_analytics_reports/src/
           git add -f /var/www/html
           # Pantheon site will use the wrong DB if the local is kept
           git rm --cache  web/sites/default/settings.local.php --ignore-unmatch
