powr-762 prevent admins from joining the groups they create by default

--- a/web/sites/default/config/group.type.elected_official.yml
+++ b/web/sites/default/config/group.type.elected_official.yml
@@ -5,7 +5,6 @@ dependencies: {  }
 id: elected_official
 label: 'Elected official'
 description: 'The officials elected by the public including the mayor, the commissioners, and the auditor.'
-creator_membership: true
+creator_membership: false
 creator_wizard: false
-creator_roles:
-  - elected_official-admin
+creator_roles: {  }
