--- a/web/sites/default/config/group.type.bureau_office.yml
+++ b/web/sites/default/config/group.type.bureau_office.yml
@@ -5,7 +5,6 @@ dependencies: {  }
 id: bureau_office
 label: Bureau/office
 description: 'A bureau or office is a governmental organization created to run programs and services provided to the community led by an elected official. These organizations may wish to share news and events with the public sporadically, but are mostly focused on highlighting their programs and services.'
-creator_membership: true
+creator_membership: false
 creator_wizard: false
-creator_roles:
-  - bureau_office-admin
+creator_roles: {  }
