POWR-730-1 clean up templates; update document view.

--- a/web/sites/default/config/core.entity_view_display.media.video.embedded.yml
+++ b/web/sites/default/config/core.entity_view_display.media.video.embedded.yml
@@ -31,6 +31,7 @@ content:
 hidden:
   content_moderation_control: true
   created: true
+  field_group: true
   field_media_in_library: true
   field_transcript: true
   name: true
