--- a/web/sites/default/config/core.entity_view_display.media.document.default.yml
+++ b/web/sites/default/config/core.entity_view_display.media.document.default.yml
@@ -24,7 +24,7 @@ content:
   created:
     label: inline
     type: timestamp
-    weight: 3
+    weight: 4
     settings:
       date_format: long
       custom_date_format: ''
@@ -39,7 +39,7 @@ content:
             classes: {  }
     region: content
   field_document:
-    weight: 2
+    weight: 3
     label: hidden
     settings:
       use_description_as_link_text: false
@@ -54,6 +54,21 @@ content:
     type: file_default
     region: content
   field_document_type:
+    weight: 1
+    label: hidden
+    settings:
+      link: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+    type: entity_reference_label
+    region: content
+  field_group:
     weight: 5
     label: above
     settings:
@@ -61,16 +76,8 @@ content:
     third_party_settings: {  }
     type: entity_reference_label
     region: content
-  field_group:
-    weight: 4
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
   field_summary:
-    weight: 1
+    weight: 2
     label: hidden
     settings:
       link_to_entity: false
