--- a/web/sites/default/config/core.entity_view_display.media.document.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.media.document.teaser.yml
@@ -5,7 +5,11 @@ dependencies:
   config:
     - core.entity_view_mode.media.teaser
     - field.field.media.document.field_document
+    - field.field.media.document.field_document_type
+    - field.field.media.document.field_file_size
+    - field.field.media.document.field_group
     - field.field.media.document.field_media_in_library
+    - field.field.media.document.field_mime_type
     - field.field.media.document.field_summary
     - media.type.document
   module:
@@ -22,8 +26,9 @@ third_party_settings:
     regions:
       content:
         - name
-        - field_summary
+        - field_document_type
         - field_document
+        - field_summary
 _core:
   default_config_hash: 4tgcXj_iKv9Fw3xmONUfCHKqO7OeOa11qVesruN4k4k
 id: media.document.teaser
@@ -39,20 +44,56 @@ content:
     settings:
       use_description_as_link_text: true
     third_party_settings: {  }
-  field_summary:
+  field_document_type:
+    type: entity_reference_label
     weight: 1
+    region: content
+    label: hidden
+    settings:
+      link: false
+    third_party_settings:
+      ds:
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: ''
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi: true
+            fi-el: div
+            fi-cl: 'badge badge-pill badge-light mb-1 order-1 align-self-start'
+            fi-at: ''
+            suffix: ''
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi-def-at: false
+  field_summary:
+    type: string
+    weight: 3
+    region: content
     label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
-    type: string
-    region: content
   name:
     label: hidden
     type: string
     weight: 0
     settings:
-      link_to_entity: true
+      link_to_entity: false
     third_party_settings:
       ds:
         ft:
@@ -71,7 +112,7 @@ content:
             fis-at: ''
             fi: true
             fi-el: h2
-            fi-cl: ''
+            fi-cl: 'h4 mt-4'
             fi-at: ''
             suffix: ''
             lbw: false
@@ -86,6 +127,9 @@ content:
 hidden:
   content_moderation_control: true
   created: true
+  field_file_size: true
+  field_group: true
   field_media_in_library: true
+  field_mime_type: true
   thumbnail: true
   uid: true
