--- a/web/sites/default/config/core.entity_view_display.node.page.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.page.default.yml
@@ -4,8 +4,8 @@ status: true
 dependencies:
   config:
     - field.field.node.page.field_audience
-    - field.field.node.page.field_group
     - field.field.node.page.field_body_content
+    - field.field.node.page.field_group
     - field.field.node.page.field_legacy_path
     - field.field.node.page.field_page_type
     - field.field.node.page.field_related_content
@@ -48,14 +48,6 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: text_default
-    region: content
-  field_group:
-    weight: 3
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
     region: content
   field_page_type:
     weight: 0
@@ -140,6 +132,7 @@ content:
 hidden:
   content_moderation_control: true
   field_audience: true
+  field_group: true
   field_legacy_path: true
   field_reviewer: true
   field_topics: true
