POWR-780 fix all the autoplaying... again

--- a/web/sites/default/config/core.entity_view_display.media.audio.thumbnail.yml
+++ b/web/sites/default/config/core.entity_view_display.media.audio.thumbnail.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.media.thumbnail
+    - field.field.media.audio.field_group
     - field.field.media.audio.field_media_in_library
     - field.field.media.audio.field_media_video_embed_field
     - field.field.media.audio.field_transcript
@@ -40,6 +41,7 @@ content:
             classes: {  }
 hidden:
   created: true
+  field_group: true
   field_media_in_library: true
   field_media_video_embed_field: true
   field_transcript: true
