--- a/web/sites/default/config/core.entity_view_display.media.audio.embedded.yml
+++ b/web/sites/default/config/core.entity_view_display.media.audio.embedded.yml
@@ -4,11 +4,13 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.media.embedded
+    - field.field.media.audio.field_group
     - field.field.media.audio.field_media_in_library
     - field.field.media.audio.field_media_video_embed_field
     - field.field.media.audio.field_transcript
     - media.type.audio
   module:
+    - ds
     - video_embed_field
 id: media.audio.embedded
 targetEntityType: media
@@ -22,13 +24,21 @@ content:
       responsive: true
       width: 854
       height: 480
-      autoplay: true
-    third_party_settings: {  }
+      autoplay: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
     type: video_embed_field_video
     region: content
 hidden:
   content_moderation_control: true
   created: true
+  field_group: true
   field_media_in_library: true
   field_transcript: true
   name: true
