--- a/web/sites/default/config/core.entity_view_display.media.video.embedded.yml
+++ b/web/sites/default/config/core.entity_view_display.media.video.embedded.yml
@@ -4,11 +4,13 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.media.embedded
+    - field.field.media.video.field_group
     - field.field.media.video.field_media_in_library
     - field.field.media.video.field_media_video_embed_field
     - field.field.media.video.field_transcript
     - media.type.video
   module:
+    - ds
     - video_embed_field
 _core:
   default_config_hash: DSsWBWw_gj2xxlQ12665l-yIIfFWIt7DJX33DGgbEHY
@@ -25,12 +27,20 @@ content:
       responsive: true
       width: 854
       height: 480
-      autoplay: true
-    third_party_settings: {  }
+      autoplay: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
     region: content
 hidden:
   content_moderation_control: true
   created: true
+  field_group: true
   field_media_in_library: true
   field_transcript: true
   name: true
